# kat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY.md  build.rs  justfile  package.json  pnpm-lock.yaml  prek.toml
.agents/skills/kat-dev/: SKILL.md
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/observability/: action.yml  index.cjs
.github/actions/sccache/: action.yml  post.cjs  setup.cjs  shared.cjs
.github/actions/setup-native-image-deps/: action.yml
.github/actions/tree-sitter-cache/: action.yml  finalize.cjs  reconcile.cjs  setup.cjs  shared.cjs
.github/scripts/: rust-link-wrapper.sh
.github/workflows/: build-matrix.yml  ci.yml
docs/: architecture.md  language-coverage.md  maintenance.md  roadmap.md  test-assets.md  vendor-grammar-exceptions.md
grammars/: registry.toml
grammars/apache/queries/: highlights.scm
grammars/authorized_keys/queries/: highlights.scm
grammars/bash/: scanner.c
grammars/bash/queries/: highlights.scm  injections.scm
grammars/cabal/queries/: highlights.scm
grammars/cfml/queries/: highlights.scm  injections.scm
grammars/cmakecache/queries/: highlights.scm
grammars/coffeescript/queries/: highlights.scm
grammars/command_help/queries/: highlights.scm
grammars/cpuinfo/queries/: highlights.scm
grammars/crontab/queries/: highlights.scm
grammars/crystal/queries/: injections.scm
grammars/css/queries/: highlights.scm
grammars/dart/: grammar.js
grammars/dart/queries/: highlights.scm
grammars/debsources/queries/: highlights.scm
grammars/dockerfile/queries/: highlights.scm  injections.scm
grammars/fish/queries/: highlights.scm
grammars/fortran/queries/: highlights.scm
grammars/fortran_namelist/queries/: highlights.scm
grammars/fstab/queries/: highlights.scm
grammars/git_commit/queries/: highlights.scm
grammars/git_config/queries/: highlights.scm
grammars/git_link/queries/: highlights.scm
grammars/git_log/queries/: highlights.scm  injections.scm
grammars/git_mailmap/queries/: highlights.scm
grammars/git_rebase/queries/: highlights.scm
grammars/gitattributes/queries/: highlights.scm
grammars/go/queries/: highlights.scm  injections.scm
grammars/gomod/queries/: highlights.scm
grammars/gosum/queries/: highlights.scm
grammars/gowork/queries/: highlights.scm
grammars/graphql/queries/: highlights.scm
grammars/groovy/queries/: highlights.scm
grammars/hcl/queries/: highlights.scm
grammars/html/queries/: highlights.scm  injections.scm
grammars/ignore/queries/: highlights.scm
grammars/javascript/queries/: highlights.scm  injections.scm
grammars/jq/queries/: highlights.scm
grammars/jsdoc/queries/: highlights.scm
grammars/json/queries/: highlights.scm
grammars/just/queries/: injections.scm
grammars/kotlin/queries/: highlights.scm
grammars/latex/queries/: highlights.scm  injections.scm
grammars/lua/queries/: highlights.scm
grammars/markdown/queries/: highlights.scm  injections.scm
grammars/markdown_inline/queries/: highlights.scm  injections.scm
grammars/nix/queries/: highlights.scm
grammars/python/queries/: highlights.scm  injections.scm
grammars/query/queries/: highlights.scm
grammars/regex/queries/: highlights-go.scm  highlights-javascript.scm  highlights-posix.scm  highlights-python.scm  highlights-rust.scm  highlights.scm
grammars/requirements/queries/: highlights.scm
grammars/ruby/queries/: highlights.scm
grammars/rust/: scanner.c
grammars/rust/queries/: highlights.scm  injections.scm
grammars/sass/queries/: highlights.scm
grammars/solidity/queries/: highlights.scm
grammars/sql/: scanner.c
grammars/sql/queries/: highlights-mysql.scm  highlights-postgres.scm  highlights-sqlite.scm  highlights.scm
grammars/ssh_config/queries/: highlights.scm
grammars/stylus/queries/: highlights.scm
grammars/svelte/queries/: highlights.scm  injections.scm
grammars/syslog/queries/: highlights.scm
grammars/textile/queries/: highlights.scm
grammars/textproto/queries/: highlights.scm
grammars/toml/: grammar.js  scanner.c
grammars/toml/queries/: highlights.scm
grammars/tsv/queries/: highlights.scm
grammars/tsx/queries/: injections.scm
grammars/twig/queries/: highlights.scm
grammars/typescript/queries/: injections.scm
grammars/typst/queries/: highlights.scm  injections.scm
grammars/userscript_metadata/queries/: highlights.scm
grammars/varlink/queries/: highlights.scm
grammars/verilog/queries/: highlights.scm
grammars/vhdl/queries/: highlights.scm
grammars/vim/queries/: injections.scm
grammars/vue/queries/: highlights.scm  injections.scm
grammars/vyper/queries/: highlights.scm
grammars/wgsl/queries/: highlights.scm
grammars/yaml/queries/: highlights.scm  injections.scm
grammars/zsh/queries/: highlights.scm  injections.scm
scripts/: perf-baseline.sh
src/: analysis.rs  armor_formats.rs  debug_progress.rs  debug_runtime_log.rs  display_geometry.rs  document_kind.rs  grammar_registry.rs  host_injections.rs  language_aliases.rs  language_runtime.rs  layout.rs  lib.rs  main.rs  pager.rs  python_docstrings.rs  render_ops.rs  semantic_overlays.rs  sql_dialect.rs  terminal.rs  terminal_background.rs  terminal_image.rs  theme.rs  visual.rs
testdata/: README.md
testdata/fixtures/actionscript/: ThemePreview.as
testdata/fixtures/ada/: theme_preview.adb
testdata/fixtures/apache/: httpd.conf
testdata/fixtures/applescript/: theme.applescript
testdata/fixtures/armor/: public.asc  server.pem  signed.asc
testdata/fixtures/asciidoc/: guide.adoc
testdata/fixtures/asm/: theme.s
testdata/fixtures/asp/: global.asa
testdata/fixtures/authorized_keys/: authorized_keys
testdata/fixtures/awk/: theme.awk
testdata/fixtures/bash/: heredoc_injections.sh  rich.sh  script.sh  sql_heredoc.sh
testdata/fixtures/batch/: rich.cmd
testdata/fixtures/bibtex/: references.bib
testdata/fixtures/c/: rich.c  theme_config.h.in
testdata/fixtures/cabal/: kat.cabal
testdata/perf/: baseline.txt
tests/: ghostty_terminal_e2e.rs
tools/validate-grammar-registry/: Cargo.toml
(+246 files in other folders)
