[package]
name = "kat"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/happy-proto/kat"
default-run = "kat"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/latest/kat-{ target }{ archive-suffix }"
bin-dir = "kat-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[package.metadata.binstall.overrides.'cfg(not(target_os = "windows"))']
pkg-fmt = "tgz"

[[bin]]
name = "kat"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.14"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
shadow-rs = "1.7.1"
shlex = "1.3.0"
terminal-colorsaurus = "1.0.3"
terminal_size = "0.4.4"
toml = "1.1.0"
tree-sitter = "0.26.7"
tree-sitter-bash = "0.25.1"
tree-sitter-batch = "0.5.0"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-dart = "0.1.0"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-embedded-template = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-groovy = "0.1.2"
tree-sitter-highlight = "0.26.7"
tree-sitter-html = "0.23.2"
tree-sitter-ini = "1.4.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-jsdoc = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-language = "0.1.7"
tree-sitter-lua = "0.5.0"
tree-sitter-make = "1.1.1"
tree-sitter-nginx = "1.0.1"
tree-sitter-nix = "0.3.0"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.3"
tree-sitter-properties = "0.3.0"
tree-sitter-python = "0.25.0"
tree-sitter-regex = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.25.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-zsh = "0.63.1"

[build-dependencies]
blake3 = "1.8.3"
cc = "1.2.57"
serde = { version = "1.0.228", features = ["derive"] }
shadow-rs = "1.7.1"
toml = "1.1.0"
tree-sitter-generate = "0.26.7"
walkdir = "2.5.0"
